# math

./: CMakeLists.txt  math-config.cmake
include/: CMakeLists.txt  matrix.hpp  vector.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
